2007-03-18  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationSettings.cs: fix the GetConfigFromFileName
	directory logic.

2007-02-17  Gert Driesen  <drieseng@users.sourceforge.net>

	* PagesConfiguration.cs: Stop swallowing configuration exceptions.
	* PagesConfigurationHandler.cs: Provide better exception message for
	invalid 'enableSessionState' value.

2007-01-20  Miguel de Icaza  <miguel@novell.com>

	* HandlerFactoryConfiguration.cs (LoadType): remove unused
	variable.
	(ctor): do not assign parent, we do not use it, keep the code for
	reference.

2007-01-18  Miguel de Icaza  <miguel@novell.com>

	* HttpCapabilitiesBase.cs: Fix the build, I kept an old code path
	for 1.0

2007-01-18  Konstantin Triger  <kostat@mainsoft.com>

	* HttpCapabilitiesBase.cs: consider Page's ClientTarget for BrowseCaps.

2006-08-15  Eyal Alalouf  <eyala@mainsoft.com>
    * WebConfigurationSettings.cs: Remove i#if TARGET_JVM since Grasshopper
	  supports Remtoing now.

2006-07-06 Andrew Skiba <andrews@mainsoft.com>

	* HttpHandlersSectionHandler.cs: validate attribute can have 'true' and
	'false' case-insensitive in net 2.0

2006-06-28 Andrew Skiba <andrews@mainsoft.com>

	* ModulesConfiguration.cs: keep the inner exception

2006-03-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRuntimeConfigurationHandler.cs: removed a bunch of useless stuff
	for 1.x.

2006-02-28  Chris Toshok  <toshok@ximian.com>

	* FormsAuthPasswordFormat.cs: ifdef out the [Serializable] in the
	2.0 case.

2006-02-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CompilationConfiguration.cs:
	* CompilationConfigurationHandler.cs: only compile these for
	pre-2.0 assemblies.

2006-02-01  Chris Toshok  <toshok@ximian.com>

	* CompilerCollection.cs: CONFIGURATION_2_0 => NET_2_0.

	* CompilationConfigurationHandler.cs: same.

	* Compiler.cs: same.

	* CompilationConfiguration.cs: same.

2006-01-08  Konstantin Triger <kostat@mainsoft.com>
